Okay, now the help buttons in the Preferences dialogs work.

--- a/English.lproj/VitaminSEE Help/Pages/preferences_1_General.html
+++ b/English.lproj/VitaminSEE Help/Pages/preferences_1_General.html
@@ -9,6 +9,7 @@
 
 	<body>
 		<div id="mainbox">
+			<a name="GENERAL_PREFERENCES_ANCHOR"></a>
 			<h1>General Preferences</h1>
 			<p><b>Smooth Images</b>: This option controls the amount of smoothing applied to the Image. "No Smoothing" disables smoothing. This is the fastest setting, but results in the lowest quality. "Low Smoothing" and "High Smoothing" display the image twice--first without smoothing for speed and then secondly with smoothing for final display.</p>
 			<p><b>Display Thumbnails</b>: If this option is checked, thumbnails that have already been created will be displayed. If it is disabled, the default file icon will be displayed.</p>
