--- a/English.lproj/VitaminSEE Help/Pages/preferences_2_Sort_Manager.html
+++ b/English.lproj/VitaminSEE Help/Pages/preferences_2_Sort_Manager.html
@@ -9,6 +9,7 @@
 
 	<body>
 		<div id="mainbox">
+			<a name="SORT_MANAGER_PREFERENCES_ANCHOR"></a>
 			<h1>Sort Manager Preferences</h1>
 			<p>This pane allows you to add and remove paths that show up in the sort manager. Clicking "Add" will bring up an Open Directory dialog where one or more directories can be selected. These directories will be added to the list of destinations.</p>
             <p>Clicking remove will remove the selected destinations from the list.</p>
