--- a/English.lproj/VitaminSEE Help/Pages/view_2_Zooming.html
+++ b/English.lproj/VitaminSEE Help/Pages/view_2_Zooming.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
 		<link href="../css/task_style.css" rel="stylesheet" media="all">
-		<title>Navigation</title>
+		<title>Zooming</title>
 		<meta name="keywords" content="vwimgtpc, zooming, zoom, scale, ratio">
 		<meta name="description" content="Covers zooming and scaling options.">
 	</head>
@@ -13,7 +13,7 @@
 			<p>There are four zoom controls.</p>
 			<p><b>Zoom to Fit</b>: If the image is too large for the viewing area, selecting Zoom to fit will automatically scale to image to fit within the viewing area. If the image will fit, the image isn't scaled and is centered in the viewing area.</p>
 			<p><b>Actual Size</b>: This will display the image at the actual size; the ratio of a pixel in the image to an image on screen is 1:1. The image will be centered horizontally or vertically if it will fit.</p>
-			<p><b>Zoom In/Zoom Out</b>: This will zoom in or zoom out on the image.</p>
+			<p><b>Zoom In/Zoom Out</b>: This will zoom in or zoom out on the image. The image will be centered horizontally or vertically if it will fit at the current zoom ratio.</p>
 		</div>
 	</body>	
 </html>
