--- a/English.lproj/VitaminSEE Help/welcome.html
+++ b/English.lproj/VitaminSEE Help/welcome.html
@@ -1,13 +1,13 @@
 <html>	<head>		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
-		<link href="../css/task_style.css" rel="stylesheet" media="all">		<title>Welcome</title>
+		<link href="css/task_style.css" rel="stylesheet" media="all">		<title>Welcome</title>
 	</head>
 	
 	<body>
-	   <div style="text-align:center;">
-	       <p>Icon Here</p>
+        <center>
+	       <img src="css/v.gif" alt="Vitamin SEE Icon" height="128" width="128" border="0">
 	       <h1>VitaminSEE</h1>
 	       <p><a href="http://www.umich.edu/~glaysher">http://www.umich.edu/~glaysher</a></p>
 	       <p style="text-size:smaller;">(C) 2005 Elliot Glaysher</p>
-	   </div>
+	   </center>
 	</body>
 </html>
