Go To Folder implemented.

--- a/English.lproj/VitaminSEE Help/Pages/preferences_1_General.html
+++ b/English.lproj/VitaminSEE Help/Pages/preferences_1_General.html
@@ -4,7 +4,8 @@
 		<link href="../css/task_style.css" rel="stylesheet" media="all">
 		<title>General Preferences</title>
 		<meta name="keywords" content="stgupvseetpc, smooth, thumbnail, generate">
-		<meta name="description" content="Goes over General Preferences: Smoothing and Thumbnails.">
+		<meta name="description" content="General Preferences: Smoothing and Thumbnails.">
+		<meta name="AppleOrder" content="1">
 	</head>
 
 	<body>
