--- a/English.lproj/VitaminSEE Help/Pages/preferences_2_Sort_Manager.html
+++ b/English.lproj/VitaminSEE Help/Pages/preferences_2_Sort_Manager.html
@@ -4,7 +4,8 @@
 		<link href="../css/task_style.css" rel="stylesheet" media="all">
 		<title>Sort Manager Preferences</title>
 		<meta name="keywords" content="stgupvseetpc, sort manager, sort, paths">
-		<meta name="description" content="Describes setting the Sort Manager paths">
+		<meta name="description" content="Setting the Sort Manager paths">
+		<meta name="AppleOrder" content="2">
 	</head>
 
 	<body>
