--- a/English.lproj/VitaminSEE Help/Pages/preferences_3_Keyword.html
+++ b/English.lproj/VitaminSEE Help/Pages/preferences_3_Keyword.html
@@ -4,7 +4,8 @@
 		<link href="../css/task_style.css" rel="stylesheet" media="all">
 		<title>Keyword Manager Preferences</title>
 		<meta name="keywords" content="stgupvseetpc, keyword manager preferences, keyword, preferences">
-		<meta name="description" content="Describes setting the common keywords in the Keyword Manager">
+		<meta name="description" content="Setting the common keywords for the Keyword Manager">
+		<meta name="AppleOrder" content="3">
 	</head>
 
 	<body>
