--- a/English.lproj/VitaminSEE Help/Pages/view_1_Navigation.html
+++ b/English.lproj/VitaminSEE Help/Pages/view_1_Navigation.html
@@ -4,7 +4,8 @@
 		<link href="../css/task_style.css" rel="stylesheet" media="all">
 		<title>Navigation</title>
 		<meta name="keywords" content="vwimgtpc, navigation">
-		<meta name="description" content="The left panel is used for navigation, and selection.">
+		<meta name="description" content="Navigating your filesystem.">
+		<meta name="AppleOrder" content="1">
 	</head>
 
 	<body>
