--- a/English.lproj/VitaminSEE Help/Pages/view_2_Zooming.html
+++ b/English.lproj/VitaminSEE Help/Pages/view_2_Zooming.html
@@ -4,7 +4,8 @@
 		<link href="../css/task_style.css" rel="stylesheet" media="all">
 		<title>Zooming</title>
 		<meta name="keywords" content="vwimgtpc, zooming, zoom, scale, ratio">
-		<meta name="description" content="Covers zooming and scaling options.">
+		<meta name="description" content="Zooming and scaling options">
+		<meta name="AppleOrder" content="2">
 	</head>
 
 	<body>
