Okay, we have a separate thread for building thumbnails. We have the main thread loading thumbnails right before display if they exist, and falling back on having one handed to them by the thumbnail building thread if they don't. I've pulled out the "display thumbnails" option, instead I've added selection of the startup folder. Wow this is a big commit...

--- a/English.lproj/VitaminSEE Help/Pages/preferences_1_General.html
+++ b/English.lproj/VitaminSEE Help/Pages/preferences_1_General.html
@@ -12,8 +12,8 @@
 		<div id="mainbox">
 			<a name="GENERAL_PREFERENCES_ANCHOR"></a>
 			<h1>General Preferences</h1>
+			<p><b>Startup Folder</b>: This is the folder that is displayed when VitaminSEE is first started. By default, it is set to your Pictures folder. Clicking "Change" will bring up an "Open" box to select a new directory.</p>
 			<p><b>Smooth Images</b>: This option controls the amount of smoothing applied to the Image. "No Smoothing" disables smoothing. This is the fastest setting, but results in the lowest quality. "Low Smoothing" and "High Smoothing" display the image twice--first without smoothing for speed and then secondly with smoothing for final display.</p>
-			<p><b>Display Thumbnails</b>: If this option is checked, thumbnails that have already been created will be displayed. If it is disabled, the default file icon will be displayed.</p>
 			<p><b>Generate Thumbnails</b>: If this option is checked, thumbnails will be generated and used for images that don't have them. Otherwise, thumbnails aren't generated.</p>
 		</div>
 	</body>
