--- a/English.lproj/VitaminSEE Help/toc.html
+++ b/English.lproj/VitaminSEE Help/toc.html
@@ -1,9 +1,13 @@
-<html>	<head>		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
-        <link href="css/toc_style.css" rel="stylesheet" media="screen">
-		<title>VitaminSEE Help</title>	</head>
+<html>
+    <head>
+       <meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+       <link href="css/toc_style.css" rel="stylesheet" media="screen">
+       <title>VitaminSEE Help</title>
+    </head>
 
     <body>
         <h1>Browse<br>			VitaminSEE Help</h1>		<p><a href="help:topic_list=vwimgtpc bookID=VitaminSEE Help template=css/genlist.html stylesheet=css/genlist_style.css Other=Viewing Images" target="Content">Viewing Images</a></p>
 		<p><a href="help:topic_list=mngimgtpc bookID=VitaminSEE Help template=css/genlist.html stylesheet=css/genlist_style.css Other=Managing Images" target="Content">Managing Images</a></p>		<p><a href="help:topic_list=stgupvseetpc bookID=VitaminSEE Help template=css/genlist.html stylesheet=css/genlist_style.css Other=Setting up VitaminSEE" target="Content">Setting up VitaminSEE</a></p>
+		<p><a href="help:topic_list=trblshting bookID=VitaminSEE Help template=css/genlist.html stylesheet=css/genlist_style.css Other=Throubleshootin" target="Content">Troubleshooting</a></p>
     </body>
 </html>
