No more deadlock in building the icon. I now make the main thread to the actual call that was causing the deadlock. ObjC has a performSelectorOnMainThread: method. Wow. Also, documentation fixes. Also, loading thumbnails is no longer broken. I'm going to play with this build for an hour and then think about tagging this as 0.5-rc2...

--- a/English.lproj/VitaminSEE Help/Pages/view_1_Navigation.html
+++ b/English.lproj/VitaminSEE Help/Pages/view_1_Navigation.html
@@ -12,6 +12,7 @@
 		<div id="mainbox">
 			<h1>Navigation</h1>
 			<p>VitaminSEE's left panel is used for navigating through your filesystem. The currently selected file is displayed in the image viewing pane. At the top is a drop down which allows you to go up the directory heiarcy.</p>
+			<p>By default, when you enter a directory, thumbnails will automatically be generated for images. These thumbnails will also show up in the Finder. You can disable this behavior by unchecking "Generate Thumbnails" in the General Preferences.</p>
 			<p>You can navigate around by using the mouse to select files or you can use the arrow keys. You can also go up, back, and forward as in the Finder.</p>
 			<p>There are also options under the Go menu to take you directly to your Home folder and your Pictures folder.</p>
 			<p>By default, you start in your "Pictures" folder.</p>
