--- a/English.lproj/VitaminSEE Help/title.html
+++ b/English.lproj/VitaminSEE Help/title.html
@@ -1,6 +1,6 @@
 <html>	<head>		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">		<title>VitaminSEE Help</title>		<META NAME="AppleTitle" CONTENT="VitaminSEE Help">
 
-		<META NAME="AppleIcon" CONTENT="SafariHelp/gfx/ibpik.png">
+		<META NAME="AppleIcon" CONTENT="./css/v_small.gif">
 
 		<META NAME="AppleFont" CONTENT="Lucida Grande,Helvetica">		<META NAME="AppleSearchResultsFont" CONTENT="Lucida Grande,Helvetica">		<META NAME="robots" CONTENT="anchors">	</head>
 
