--- a/English.lproj/VitaminSEE Help/Pages/preferences_3_Keyword.html
+++ b/English.lproj/VitaminSEE Help/Pages/preferences_3_Keyword.html
@@ -12,7 +12,7 @@
 		<div id="mainbox">
 			<a name="KEYWORD_MANAGER_PREFERENCES_ANCHOR"></a>
 			<h1>Keyword Manager Preferences</h1>
-			<p>This pane allows you to add and remove keywords that will show up in the Common Keywords portion of the <a href="">Keyword Manager</a>.</p>
+			<p>This pane allows you to add and remove keywords that will show up in the Common Keywords portion of the <a href="./managing_2_Keywords.html">Keyword Manager</a>.</p>
 			<p>The Keyword tree starts with "Keywords", which can not be removed and is not shown in the Keyword Manager. It is there to represent the root of the keyword tree.</p>
 			<p>Clicking "Add Keyword" adds a keyword as a child to the currently selected Keyword. This allows you to build a heiarchy of keywords.</p>
 			<p>Clicking Remove will remove the currently selected keyword.</p>
