Tagging for final. There are performance problems, but this is just how it's going to be. -_-

--- a/English.lproj/VitaminSEE Help/Pages/troubleshooting_known.html
+++ b/English.lproj/VitaminSEE Help/Pages/troubleshooting_known.html
@@ -14,6 +14,7 @@
 			<div style="taskbox">
 			    <ul>
 			    <li>After changing into a new directory, there is a small window (usually less then 2 seconds) when thumbnails for files other then the first two visible in the list are not renerd. They are quickly displayed afterwards. This problem occurs because of a hack I put in that forces extra redraws on the image list. This hack prevents image corruption--before I added this hack, thumbnail's would often draw ontop of other thumbnails because of what I'm guessing is a bug in NSScrollView.</li>
+			    <li>After renaming a file, thumbnails for other files aren't displayed until you click on the main window.</li>
 			    </ul>
 			</div>
 		</div>
