* Different link for PreferenceController * BMP support * Check if "~/Pictures" exists, and use ~ as default if it doesn't.

--- a/English.lproj/Credits.html
+++ b/English.lproj/Credits.html
@@ -8,7 +8,7 @@
 		VitaminSEE uses the following open code:
 		<a href="http://homepage.mac.com/troy_stephens/software/objects/IconFamily/">IconFamily</a> by Troy Stephens<br>
 		<a href="http://home.arcor.de/ahuggel/exiv2">Exiv2</a> by Andreas Huggel<br>
-		<a href="http://www.scotlandsoftware.com/">Preferences Controller</a> by Matt Gemmell<br>
+		<a href="http://www.scotlandsoftware.com/products/source/">Preferences Controller</a> by Matt Gemmell<br>
 		</center>
 	</body>
 </html>
