Working on the help system.

--- a/English.lproj/VitaminSEE Help/Pages/managing_1_Sort.html
+++ b/English.lproj/VitaminSEE Help/Pages/managing_1_Sort.html
@@ -11,7 +11,8 @@
 		<div id="mainbox">
 			<h1>Sorting images into folders</h1>
 			<p>Clicking "Sort Manager" in the Window menu will bring up the Sort Manager. Each entry in the Sort Manager has a "Move" and a "Copy" button. Clicking on these buttons will move or copy the current image to the destination folder.</p>
-			<p>For information on setting the Sort Manager paths, click <a href="./preferences_2_Sort_Manager.html">here</a>.</p>
+			<p>Buttons are disabled when the destination path doesn't exist (for example, if you renamed the directory), or when the main window isn't open.</p>
+			<p>The Sort Manager uses your Favorite locations. For information on setting your Favorite locations, click <a href="./preferences_2_Favorites.html">here</a>.</p>
 		</div>
 	</body>	
 </html>
