Continueing the help rearrangement

--- a/English.lproj/VitaminSEE Help/Managing/html/managing_1_Sort.html
+++ b/English.lproj/VitaminSEE Help/Managing/html/managing_1_Sort.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
-		<link href="../css/task_style.css" rel="stylesheet" media="all">
+		<link href="../../css/task_style.css" rel="stylesheet" media="all">
 		<title>Sorting images into folders</title>
 		<meta name="keywords" content="mngimgtpc, sort, sorting, destination, copy, move">
 		<meta name="description" content="Sorting images into folders">
@@ -12,7 +12,7 @@
 			<h1>Sorting images into folders</h1>
 			<p>Clicking "Sort Manager" in the Window menu will bring up the Sort Manager. Each entry in the Sort Manager has a "Move" and a "Copy" button. Clicking on these buttons will move or copy the current image to the destination folder.</p>
 			<p>Buttons are disabled when the destination path doesn't exist (for example, if you renamed the directory), or when the main window isn't open.</p>
-			<p>The Sort Manager uses your Favorite locations. For information on setting your Favorite locations, click <a href="./preferences_2_Favorites.html">here</a>.</p>
+			<p>The Sort Manager uses your Favorite locations. For information on setting your Favorite locations, click <a href="../../Preferences/html/preferences_2_Favorites.html">here</a>.</p>
 		</div>
 	</body>	
 </html>
