--- a/English.lproj/VitaminSEE Help/Preferences/html/preferences_1_General.html
+++ b/English.lproj/VitaminSEE Help/Preferences/html/preferences_1_General.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
-		<link href="../css/task_style.css" rel="stylesheet" media="all">
+		<link href="../../css/task_style.css" rel="stylesheet" media="all">
 		<title>General Preferences</title>
 		<meta name="keywords" content="stgupvseetpc, smooth, thumbnail, generate">
 		<meta name="description" content="General Preferences: Smoothing and Thumbnails.">
