--- a/English.lproj/VitaminSEE Help/BasicUsage/html/view_2_Zooming.html
+++ b/English.lproj/VitaminSEE Help/BasicUsage/html/view_2_Zooming.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
-		<link href="../css/task_style.css" rel="stylesheet" media="all">
+		<link href="../../css/task_style.css" rel="stylesheet" media="all">
 		<title>Zooming</title>
 		<meta name="keywords" content="vwimgtpc, zooming, zoom, scale, ratio">
 		<meta name="description" content="Zooming and scaling options">
