--- a/English.lproj/VitaminSEE Help/Preferences/html/preferences_2_Favorites.html
+++ b/English.lproj/VitaminSEE Help/Preferences/html/preferences_2_Favorites.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
-		<link href="../css/task_style.css" rel="stylesheet" media="all">
+		<link href="../../css/task_style.css" rel="stylesheet" media="all">
 		<title>Favorites Preferences</title>
 		<meta name="keywords" content="stgupvseetpc, favorites, sort manager, sort, paths">
 		<meta name="description" content="Setting the Favorite paths">
