--- a/English.lproj/VitaminSEE Help/toc.html
+++ b/English.lproj/VitaminSEE Help/toc.html
@@ -6,8 +6,27 @@
     </head>
 
     <body>
-        <h1>Browse<br>			VitaminSEE Help</h1>		<p><a href="help:topic_list=vwimgtpc bookID=VitaminSEE Help template=css/genlist.html stylesheet=css/genlist_style.css Other=Viewing Images" target="Content">Viewing Images</a></p>
-		<p><a href="help:topic_list=mngimgtpc bookID=VitaminSEE Help template=css/genlist.html stylesheet=css/genlist_style.css Other=Managing Images" target="Content">Managing Images</a></p>		<p><a href="help:topic_list=stgupvseetpc bookID=VitaminSEE Help template=css/genlist.html stylesheet=css/genlist_style.css Other=Setting up VitaminSEE" target="Content">Setting up VitaminSEE</a></p>
-		<p><a href="help:topic_list=trblshting bookID=VitaminSEE Help template=css/genlist.html stylesheet=css/genlist_style.css Other=Throubleshooting" target="Content">Troubleshooting</a></p>
+    <table>
+<!-- AppleTOCRowBegin -->
+<TR HEIGHT="1">
+    <TD HEIGHT="1" WIDTH="158"></TD>
+</TR>
+<TR>
+    <TD WIDTH="158"><FONT FACE="Helvetica,Arial" SIZE="2">
+    <A HREF="BasicUsage/index.html" TARGET="Content">Basic Usage</A></FONT>
+    </TD>
+</TR>
+<TR>
+    <TD WIDTH="158"><FONT FACE="Helvetica,Arial" SIZE="2">
+    <A HREF="Managing/index.html" TARGET="Content">Managing Files</A></FONT>
+    </TD>
+</TR>
+<TR>
+    <TD WIDTH="158"><FONT FACE="Helvetica,Arial" SIZE="2">
+    <A HREF="Preferences/index.html" TARGET="Content">Preferences</A></FONT>
+    </TD>
+</TR>
+<!-- AppleTOCRowEnd -->
+    </table>
     </body>
 </html>
