The help is probably done now.

--- a/English.lproj/VitaminSEE Help/toc.html
+++ b/English.lproj/VitaminSEE Help/toc.html
@@ -6,27 +6,12 @@
     </head>
 
     <body>
-    <table>
-<!-- AppleTOCRowBegin -->
-<TR HEIGHT="1">
-    <TD HEIGHT="1" WIDTH="158"></TD>
-</TR>
-<TR>
-    <TD WIDTH="158"><FONT FACE="Helvetica,Arial" SIZE="2">
-    <A HREF="BasicUsage/index.html" TARGET="Content">Basic Usage</A></FONT>
-    </TD>
-</TR>
-<TR>
-    <TD WIDTH="158"><FONT FACE="Helvetica,Arial" SIZE="2">
-    <A HREF="Managing/index.html" TARGET="Content">Managing Files</A></FONT>
-    </TD>
-</TR>
-<TR>
-    <TD WIDTH="158"><FONT FACE="Helvetica,Arial" SIZE="2">
-    <A HREF="Preferences/index.html" TARGET="Content">Preferences</A></FONT>
-    </TD>
-</TR>
-<!-- AppleTOCRowEnd -->
-    </table>
+    <h1>Browse<br/>
+    VitaminSEE<br/>
+    Help</h1>
+    <p><A HREF="BasicUsage/index.html" TARGET="Content">Basic Usage</A></p>
+    <p><A HREF="Managing/index.html" TARGET="Content">Managing Files</A></p>
+    <p><A HREF="Preferences/index.html" TARGET="Content">Preferences</A></p>
+    <p><A HREF="Troubleshooting/index.html" TARGET="Content">Troubleshooting</A></p>
     </body>
 </html>
