--- a/English.lproj/VitaminSEE Help/Troubleshooting/html/troubleshooting_1.html
+++ b/English.lproj/VitaminSEE Help/Troubleshooting/html/troubleshooting_1.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
-		<link href="../css/task_style.css" rel="stylesheet" media="all">
+		<link href="../../css/task_style.css" rel="stylesheet" media="all">
 		<title>Images won't load</title>
 		<meta name="keywords" content="trblshting, Troubleshooting, Image, load, error">
 		<meta name="description" content="What to try when images won't load">
@@ -10,11 +10,11 @@
 
 	<body>
 		<div id="mainbox">
-		<a name="IMAGE_WONT_LOAD_ANCHOR"></a>
+		<a name="VITAMINSEE_IMAGE_WONT_LOAD_ANCHOR"></a>
 			<h1>What to try when images won't load</h1>
 			<div style="taskbox">
 			    <ul>
-			    <li>Is the file extentsion correct? Do you have a JPEG file named MyFile.PNG?</li>
+			    <li>Is the file a valid image file?</li>
 			    <li>Do you have permission to read the file?</li>
 			    <li>Has the file been deleted?</li>
 			    </ul>
