Final fixes to fix some braindeadness with NSHomeDirectory giving lowercase results on some of the Sites macs. This code is now 0.6.

--- a/English.lproj/VitaminSEE Help/Troubleshooting/html/troubleshooting_known.html
+++ b/English.lproj/VitaminSEE Help/Troubleshooting/html/troubleshooting_known.html
@@ -16,6 +16,7 @@
 			    <li>After renaming a file, thumbnails for other files aren't displayed until you click on the main window.</li>
 			    <li>OSX localizes several folder names ("Users", "Pictures", et all), but VitaminSEE displays the physical name of the folder instead of the localized one.</li>
 			    <li>If you make the file view too smalll, then the file view gets messed up and the program has to be restarted.</li>
+			    <li>If you close the VitaminSEE window, and then open the Sort Manager, the buttons aren't greyed out.</li>
 			    </ul>
 			</div>
 		</div>
