Upgrade RBSplitView from 1.1 to 1.1.1

--- a/English.lproj/Credits.html
+++ b/English.lproj/Credits.html
@@ -10,6 +10,7 @@
 		<a href="http://home.arcor.de/ahuggel/exiv2">Exiv2</a> by Andreas Huggel<br>
 		<a href="http://www.scotlandsoftware.com/products/source/">Preferences Controller</a> by Matt Gemmell<br>
 		<a href="http://www.scotlandsoftware.com/products/source/">Grab-scrolling code</a> originally by Matt Gemmell<br>
+		<a href="http://www.brockerhoff.net/src/rbs.html">RBSplitView</a> by Rainer Brockerhoff<br>
 		</center>
 	</body>
 </html>
