--- a/English.lproj/VitaminSEE Help/Preferences/index.html
+++ b/English.lproj/VitaminSEE Help/Preferences/index.html
@@ -28,6 +28,11 @@
     <A HREF="html/preferences_3_Keyword.html" TARGET="Content">Keywords</A></FONT>
     </TD>
 </TR>
+<TR>
+    <TD WIDTH="158"><FONT FACE="Helvetica,Arial" SIZE="2">
+    <A HREF="html/preferences_4_Advanced.html" TARGET="Content">Advanced</A></FONT>
+    </TD>
+</TR>
 <!-- AppleTOCRowEnd -->
 </table>
 </body>
