--- a/English.lproj/VitaminSEE Help/Troubleshooting/html/troubleshooting_known.html
+++ b/English.lproj/VitaminSEE Help/Troubleshooting/html/troubleshooting_known.html
@@ -13,7 +13,8 @@
 			<h1>Known Problems in VitaminSEE</h1>
 			<div style="taskbox">
 			    <ul>
-			    <li>If you make the file view too smalll, then the file view gets messed up and the program has to be restarted.</li>
+			    <li>When expanding the file view so that it engulfs the entire window, an error comes up selecting every image.</li>
+			    <li>Resizing the file view makes the image view flicker.</li>
 			    </ul>
 			</div>
 		</div>
