Use Matt Gemmell's unordered list icon for the Keyword Manager Preferences and credit appropriatly

--- a/English.lproj/Credits.html
+++ b/English.lproj/Credits.html
@@ -11,6 +11,11 @@
 		<a href="http://www.scotlandsoftware.com/products/source/">Preferences Controller</a> by Matt Gemmell<br>
 		<a href="http://www.scotlandsoftware.com/products/source/">Grab-scrolling code</a> originally by Matt Gemmell<br>
 		<a href="http://www.brockerhoff.net/src/rbs.html">RBSplitView</a> by Rainer Brockerhoff<br>
+		<br>
+		The VitaminSEE icon is a composite of the <a href="http://artist.kde.org/new/license.html">Crystal icon set</a>,
+		created by Everaldo. The Keyword Manager Preferences icon is one of Matt Gemmell's 
+		<a href="http://iratescotsman.com/products/icons/">Developer Icons</a> and is liscenced under 
+		<a href="http://creativecommons.org/licenses/by/1.0/">CC-BY-1.0</a>.
 		</center>
 	</body>
 </html>
