--- a/English.lproj/VitaminSEE Help/BasicUsage/html/view_2_Zooming.html
+++ b/English.lproj/VitaminSEE Help/BasicUsage/html/view_2_Zooming.html
@@ -15,7 +15,7 @@
 			<p><b>Zoom to Fit</b>: If the image is too large for the viewing area, selecting Zoom to fit will automatically scale to image to fit within the viewing area. If the image will fit, the image isn't scaled and is centered in the viewing area.</p>
 			<p><b>Actual Size</b>: This will display the image at the actual size; the ratio of a pixel in the image to an image on screen is 1:1. The image will be centered horizontally or vertically if it will fit.</p>
 			<p><b>Zoom In/Zoom Out</b>: This will zoom in or zoom out on the image. The image will be centered horizontally or vertically if it will fit at the current zoom ratio.</p>
-			<p>When the image will not fit in the size of the viewing area, you can grab the image with the hand cursor or you can use traditional scroll bars.</p>
+			<p>When the image will not fit in the size of the viewing area, you can grab the image with the hand cursor or you can use traditional scroll bars. You can also scroll with the arrow keys if the image view is selected.</p>
 		</div>
 	</body>	
 </html>
