--- a/English.lproj/Credits.html
+++ b/English.lproj/Credits.html
@@ -14,7 +14,7 @@
 		<br>
 		The VitaminSEE icon is a composite of the <a href="http://artist.kde.org/new/license.html">Crystal icon set</a>,
 		created by Everaldo. The Keyword Manager Preferences icon is one of Matt Gemmell's 
-		<a href="http://iratescotsman.com/products/icons/">Developer Icons</a> and is liscenced under 
+		<a href="http://iratescotsman.com/products/icons/">Developer Icons</a> and is licensed under 
 		<a href="http://creativecommons.org/licenses/by/1.0/">CC-BY-1.0</a>.
 		</center>
 	</body>
