Final Japanese localization issues

--- a/English.lproj/Credits.html
+++ b/English.lproj/Credits.html
@@ -12,6 +12,8 @@
 		<a href="http://www.scotlandsoftware.com/products/source/">Grab-scrolling code</a> originally by Matt Gemmell<br>
 		<a href="http://www.brockerhoff.net/src/rbs.html">RBSplitView</a> by Rainer Brockerhoff<br>
 		<br>
+		Japanese localization by Elliot Glaysher, with help from observing Apple's translations, and the translation of gqview.<br>
+		<br>
 		The VitaminSEE icon is a composite of the <a href="http://artist.kde.org/new/license.html">Crystal icon set</a>,
 		created by Everaldo. The Keyword Manager Preferences icon is one of Matt Gemmell's 
 		<a href="http://iratescotsman.com/products/icons/">Developer Icons</a> and is licensed under 
