Going on 0.6.4. This package goes to Hiroto now...

--- a/English.lproj/VitaminSEE Help/Preferences/html/preferences_1_General.html
+++ b/English.lproj/VitaminSEE Help/Preferences/html/preferences_1_General.html
@@ -15,7 +15,8 @@
 			<p><b>Startup Folder</b>: This is the folder that is displayed when VitaminSEE is first started. By default, it is set to your Pictures folder. Clicking "Change" will bring up an "Open" box to select a new directory.</p>
 			<p><b>Smooth Images</b>: This option controls the amount of smoothing applied to the Image. "No Smoothing" disables smoothing. This is the fastest setting, but results in the lowest quality. "Low Smoothing" and "High Smoothing" display the image twice--first without smoothing for speed and then secondly with smoothing for final display.</p>
 			<p>Due to limitations in Cocoa, smoothing is not applied to animated images.</p>
-			<p><b>Generate Thumbnails</b>: If this option is checked, thumbnails will be generated and used for images that don't have them. Otherwise, thumbnails aren't generated.</p>
+			<p><b>Generate Thumbnails</b>: If this option is checked, thumbnails will be generated and displayed for files that don't have them.</p>
+			<p><b>Store Thumbnails On Disk</b>: Store thumbnails with the image file. VitaminSEE will use these thumbnails instead of regenerating them.</p>
 		</div>
 	</body>
 	
