--- a/Resources/Credits.html
+++ b/Resources/Credits.html
@@ -8,9 +8,9 @@
 		VitaminSEE uses the following open code:
 		<a href="http://homepage.mac.com/troy_stephens/software/objects/IconFamily/">IconFamily</a> by Troy Stephens<br>
 		<a href="http://home.arcor.de/ahuggel/exiv2">Exiv2</a> by Andreas Huggel<br>
-		<a href="http://www.scotlandsoftware.com/products/source/">Preferences Controller</a> by Matt Gemmell<br>
-		<a href="http://www.scotlandsoftware.com/products/source/">Grab-scrolling code</a> originally by Matt Gemmell<br>
+		Preferences Controller and Grab-scrolling code by <a href="http://www.scotlandsoftware.com/products/source/">Matt Gemmell</a><br>
 		<a href="http://www.brockerhoff.net/src/rbs.html">RBSplitView</a> by Rainer Brockerhoff<br>
+		UKCrashReporter, UKUpdateChecker, UKFeedbackProvider, and UKKQueue by <a href="http://www.zathras.de/angelweb/sourcecode.htm">M. Uli Kusterer</a><br>
 		<br>
 		Japanese localization by <a href="http://www.fan.gr.jp/~sakai/">Hiroto Sakai</a>, who also translated the AppleHelp files.<br>
 		<br>
