Update help file, making the resize a known issue.

--- a/English.lproj/VitaminSEE Help/Troubleshooting/html/troubleshooting_known.html
+++ b/English.lproj/VitaminSEE Help/Troubleshooting/html/troubleshooting_known.html
@@ -13,7 +13,11 @@
 			<h1>Known Problems in VitaminSEE</h1>
 			<div style="taskbox">
 			    <ul>
-			    <li>Resizing the file view makes the image view flicker.</li>
+			    <li>Certain haxies cause VitaminSEE to crash. Some of these are
+				 making legitimate problems in VitaminSEE more apparent, and 
+				 some are because of the haxie writer.</li>
+				<li>VitaminSEE only remembers the size and location of the
+				 first window opened.</li>
 			    </ul>
 			</div>
 		</div>
